# bdgb

./: .gitignore  CMakeLists.txt  README.md  auditoria.md
agents/: registry.json
agents/trend-tracker/: config.json  trend_tracker.py
agents/youtube-automator/: config.json
crypt/: bdgb_crypt.c  bdgb_crypt.h
crypt/challenge/: CHALLENGE_BUNDLE.md  README_CHALLENGE.md  secret.bdgb
docs/: auditor_v4.py  generate_audit_v3.py  glifo_technology.py
glifos/: README.md  glifosenilla.template.json  registry.json  semilla.template.json
glifos/coordenadas/: glifo.json  semilla.json
glifos/coordenadas/glifos/coordenadas-reader/: coordenadas.c  glifo.json  reader.py  recursos.rc
glifos/generacion-contenido/: INSTRUCCIONES.txt  INSTRUCCIONES_DEBUG.txt  calibrar.py  cdp_utils.py  check_cdp.py  chrome_cdp.json  debug_notebooklm.py  diagnostico_notebooklm.py  dump_dom.py  dump_dom2.py  glifo.json  gui_launch.py  gui_utils.py  lector_coords.py  plantilla_coords.py  respuesta_ia.txt  run.bat  run.py  run.sh  semilla.json
glifos/generacion-contenido/chrome_data/: Local State
glifos/generacion-contenido/chrome_data/Default/: BrowsingTopicsState  DIPS  Favicons  History  MediaDeviceSalts  Preferences  Secure Preferences  Top Sites  Web Data
glifos/generacion-contenido/guias/: CAPTURA_API.md  NOTEBOOKLM_GUIDE.md  notebooklm.json
glifos/trend-tracker/: agent.json  config.json  trend_tracker.py
glifos/trend-tracker/daily/: 2026-06-03.json  2026-06-05.json  2026-06-06.json
glifos/vigilancia-tendencias/: README.md  glifosenilla.json  semilla.json  workflow.json
include/: agent.h  bdgb.h  concept_graph.h  glifo.h  json.h  learning.h  mmia.h  nlp.h  rae.h  search.h  semantics.h  util.h
interface/: bdgb_bridge.py  bdgb_gui.py
scripts/: scraper_trends.py
src/: agent.c  concept_graph.c  glifo.c  grid.c  json.c  learning.c  main.c  mmia_module.c  nlp.c  node.c  rae.c  search.c  semantics.c  storage.c  util.c
tests/: test_bdgb.c
(+188 files in other folders)
